--- a/style.css
+++ b/style.css
@@ -1,30 +1,27 @@
-
-body{
-    margin: 20px;
+#bag{
+    width: 200px;
+    height: 500px;
+    margin: 0 auto;
+    background: url(./bag.png) center no-repeat;
+    background-size: 80%;
+}
+#bag.burst {
+    background: url(./bag-burst.png) center no-repeat;
+    background-size: 80%;
 }
 
-#canvas{
-    max-width: 500px;
-    max-height: 500px;
-    padding: 200px 20px;
-    text-align: center;
-    border: 1px solid black;
-    margin-top: 15px;
+#bag-health {
+    width: 200px;
+    border: 2px solid #000;
+    margin:  0 auto 20px auto;
 }
 
-span {
-    background: red;
-    display: inline-block;
-    padding: 10px;
-    color: #fff;
-    margin: 10px 0;
+#bag-health div {
+    height: 20px;
+    background: crimson;
 }
 
-.available span {
-    background-color: green;
-}
-
-.nearby span::after{
-    content: "nearby";
-    margin-left: 10px;
+#controls {
+    width: 120px;
+    margin: 0 auto;
 }
